--- a/TurtleGames.VoxelEngine/TurtleGames.VoxelEngine.csproj
+++ b/TurtleGames.VoxelEngine/TurtleGames.VoxelEngine.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Stride.CommunityToolkit" Version="1.0.0-preview.15" />
     <PackageReference Include="Stride.Engine" Version="4.2.0.2043" PrivateAssets="contentfiles;analyzers" />
 
     <PackageReference Include="Stride.Video" Version="4.2.0.2043" PrivateAssets="contentfiles;analyzers" />
